<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="compose_hint">SMS message</string>
    <string name="send_message_desc">Send message</string>
    <string name="new_to">To:</string>
    <string name="new_hint">Type a name, phone number, or email</string>
    <string name="thread_cannot_reply">You can\'t reply to this sender</string>
    <string name="new_keyboard_dialpad">Show dial pad</string>
    <string name="new_keyboard_text">Show keyboard</string>
...
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_forward">Forward</string>
    <string name="cancel">Cancel</string>
    <string name="new_conversation_title">New conversation</string>
    <string name="action_archive">Archive</string>
    <string name="action_block">Block</string>
    <string name="action_call">Call</string>
    <string name="action_add_contact">Add to contacts</string>
    <string name="action_delete_conversation">Delete conversation</string>
    <string name="action_not_spam">Not spam</string>
    <string name="action_report_spam">Report spam</string>
    <plurals name="delete_messages_title">
...
